--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         
         <section class="input-section">
-            <h2 class="section-title">¡Hola! ¡Ingresa el nombre de sus amigos!</h2>
+            <h2 class="section-title">¡Bienvenid@! ¡Ingresa el nombre de tus amigos para el sorteo!</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
                 <button class="button-add" onclick="agregarAmigo()">Añadir</button>
